--- a/launch-countdown-timer-main/index.html
+++ b/launch-countdown-timer-main/index.html
@@ -1,31 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+
+  <!-- styles -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles/style.css">
+
   <title>Frontend Mentor | Launch countdown timer</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+      display: none
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <!-- site wrapper -->
+  <div class="site-wrapper">
 
-  We're launching soon
+    <main>
 
-  Days
-  Hours
-  Minutes
-  Seconds
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <!-- title -->
+      <header>
+        <h1>
+          We're launching soon
+        </h1>
+      </header>
+      <!-- end title -->
+
+      <!-- countdown section  -->
+      <div class="countdown">
+
+        <!-- card days -->
+        <div class="card days">
+          <span class="number">0</span>
+          <span class="desciption">Days</span>
+        </div>
+        <!-- end card days -->
+
+        <!-- card hours -->
+        <div class="card days">
+          <span class="number">0</span>
+          <span class="desciption">Hours</span>
+        </div>
+        <!-- end card hours -->
+        
+
+        <!-- card minutes -->
+        <div class="card days">
+          <span class="number">0</span>
+          <span class="desciption">Minutes</span>
+        </div>
+        <!-- end card minutes -->
+
+        <!-- card seconds -->
+        <div class="card days">
+          <span class="number">0</span>
+          <span class="desciption">Seconds</span>
+        </div>
+        <!-- end card seconds -->
+
+      </div>
+      <!-- end countdown section  -->
+
+      <!-- social icons section -->
+      <footer class="social-icons">
+        <a href="#" class="icon facebook">
+          <img src="images/icon-facebook.svg" alt="Facebook">
+        </a>
+        <a href="#" class="icon pinterest">
+          <img src="images/icon-pinterest.svg" alt="Pinterest">
+        </a>
+        <a href="#" class="icon instagram">
+          <img src="images/icon-instagram.svg" alt="Instagram">
+        </a>
+      </footer>
+      <!-- end social icons section -->
+    </main>
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+
   </div>
+  <!-- end site wrapper -->
 </body>
+
 </html>
