--- a/launch-countdown-timer-main/index.html
+++ b/launch-countdown-timer-main/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <!-- displays site properly based on user's device -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <!-- displays site properly based on user's device -->
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="32x32"
+      href="./images/favicon-32x32.png" />
 
-  <!-- styles -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles/style.css">
+    <!-- styles -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;700&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="styles/style.css">
 
-  <title>Frontend Mentor | Launch countdown timer</title>
+    <title>Frontend Mentor | Launch countdown timer</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
     .attribution {
       font-size: 11px;
       text-align: center;
@@ -27,79 +30,84 @@
       color: hsl(228, 45%, 44%);
     }
   </style>
-</head>
+  </head>
 
-<body>
-  <!-- site wrapper -->
-  <div class="site-wrapper">
+  <body>
+    <div class="bg-site">
 
-    <main>
+      <!-- all wrapper -->
+      <div class="content-wrapper">
 
-      <!-- title -->
-      <header>
-        <h1>
-          We're launching soon
-        </h1>
-      </header>
-      <!-- end title -->
+        <main>
 
-      <!-- countdown section  -->
-      <div class="countdown">
+          <!-- title -->
+          <header>
+            <h1>
+              We're launching soon
+            </h1>
+          </header>
+          <!-- end title -->
 
-        <!-- card days -->
-        <div class="card days">
-          <span class="number">0</span>
-          <span class="desciption">Days</span>
+          <!-- countdown section  -->
+          <div class="countdown">
+
+            <!-- card days -->
+            <div class="card-group days">
+              <div class="card">0</div>
+              <span class="description">Days</span>
+            </div>
+            <!-- end card days -->
+
+            <!-- card hours -->
+            <div class="card-group days">
+              <div class="card">0</div>
+              <span class="description">Hours</span>
+            </div>
+            <!-- end card hours -->
+
+
+            <!-- card minutes -->
+            <div class="card-group days">
+              <div class="card">0</div>
+              <span class="description">Minutes</span>
+            </div>
+            <!-- end card minutes -->
+
+            <!-- card seconds -->
+            <div class="card-group days">
+              <div class="card">0</div>
+              <span class="description">Seconds</span>
+            </div>
+            <!-- end card seconds -->
+
+          </div>
+          <!-- end countdown section  -->
+
+        </main>
+
+        <!-- social icons section -->
+        <footer class="social-icons">
+          <a href="#" class="icon">
+            <img src="images/icon-facebook.svg" alt="Facebook">
+          </a>
+          <a href="#" class="icon">
+            <img src="images/icon-pinterest.svg" alt="Pinterest">
+          </a>
+          <a href="#" class="icon">
+            <img src="images/icon-instagram.svg" alt="Instagram">
+          </a>
+        </footer>
+        <!-- end social icons section -->
+
+        <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge"
+            target="_blank">Frontend Mentor</a>.
+          Coded by <a href="#">Your Name Here</a>.
         </div>
-        <!-- end card days -->
 
-        <!-- card hours -->
-        <div class="card days">
-          <span class="number">0</span>
-          <span class="desciption">Hours</span>
-        </div>
-        <!-- end card hours -->
-        
+      </div> <!-- end all wrapper -->
 
-        <!-- card minutes -->
-        <div class="card days">
-          <span class="number">0</span>
-          <span class="desciption">Minutes</span>
-        </div>
-        <!-- end card minutes -->
-
-        <!-- card seconds -->
-        <div class="card days">
-          <span class="number">0</span>
-          <span class="desciption">Seconds</span>
-        </div>
-        <!-- end card seconds -->
-
-      </div>
-      <!-- end countdown section  -->
-
-      <!-- social icons section -->
-      <footer class="social-icons">
-        <a href="#" class="icon facebook">
-          <img src="images/icon-facebook.svg" alt="Facebook">
-        </a>
-        <a href="#" class="icon pinterest">
-          <img src="images/icon-pinterest.svg" alt="Pinterest">
-        </a>
-        <a href="#" class="icon instagram">
-          <img src="images/icon-instagram.svg" alt="Instagram">
-        </a>
-      </footer>
-      <!-- end social icons section -->
-    </main>
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div>
-
-  </div>
-  <!-- end site wrapper -->
-</body>
+    </div> <!-- background -->
+  </body>
 
 </html>
