sripts iniciales y testing

--- a/launch-countdown-timer-main/index.html
+++ b/launch-countdown-timer-main/index.html
@@ -52,30 +52,30 @@
           <div class="countdown">
 
             <!-- card days -->
-            <div class="card-group days">
-              <div class="card">0</div>
+            <div class="card-group">
+              <div id="day" class="card"></div>
               <span class="description">Days</span>
             </div>
             <!-- end card days -->
 
             <!-- card hours -->
-            <div class="card-group days">
-              <div class="card">0</div>
+            <div class="card-group">
+              <div id="hour" class="card"></div>
               <span class="description">Hours</span>
             </div>
             <!-- end card hours -->
 
 
             <!-- card minutes -->
-            <div class="card-group days">
-              <div class="card">0</div>
+            <div class="card-group">
+              <div id="minute" class="card"></div>
               <span class="description">Minutes</span>
             </div>
             <!-- end card minutes -->
 
             <!-- card seconds -->
-            <div class="card-group days">
-              <div class="card">0</div>
+            <div class="card-group">
+              <div id="second" class="card"></div>
               <span class="description">Seconds</span>
             </div>
             <!-- end card seconds -->
@@ -108,6 +108,9 @@
       </div> <!-- end all wrapper -->
 
     </div> <!-- background -->
+
+    <!-- script -->
+    <script src="scripts/main.js"></script>
   </body>
 
 </html>
