--- a/launch-countdown-timer-main/index.html
+++ b/launch-countdown-timer-main/index.html
@@ -110,6 +110,7 @@
     </div> <!-- background -->
 
     <!-- script -->
+    <script src="scripts/core.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 
