animaciones terminadas animaciones, backgrounds y detalles

--- a/launch-countdown-timer-main/index.html
+++ b/launch-countdown-timer-main/index.html
@@ -34,6 +34,8 @@
 
   <body>
     <div class="bg-site">
+      <div class="bg-stars"></div>
+      <div class="bg-hills"></div>
 
       <!-- all wrapper -->
       <div class="content-wrapper">
