--- a/launch-countdown-timer-main/index.html
+++ b/launch-countdown-timer-main/index.html
@@ -18,73 +18,6 @@
 
     <title>Frontend Mentor | Launch countdown timer</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-    .attribution {
-      font-size: 10px;
-      text-align: left;
-
-      max-width: 22px;
-      max-height: 22px;
-      padding: 4px 8px;
-      position: fixed;
-      top: 8px;
-      left: 8px;
-
-      overflow: hidden;
-      background: hsl(240, 5%, 91%);
-      border-radius: 30px;
-      box-shadow: 0px 2px 6px #0000008c;
-
-      transition-property: max-width;
-      transition-duration:  .5s;
-      transition-timing-function: ease-out
-    }
-
-    .attribution p{
-      position: relative;
-      top: 0;
-      right: 0;
-      width: 308px;
-    }
-
-    .attribution::after {
-      content: "i";
-      font-family: serif;
-      font-size: 26px;
-      font-weight: 700;
-      text-align: center;
-      line-height: normal;
-      color:hsl(271deg 23% 18%);
-
-      width: 22px;
-      height: 22px;
-
-      position: absolute;
-      top:0;
-      left: 0;
-
-      background-color: hsl(240, 5%, 91%);
-      border-radius: 50%;
-      transition-property: transform, opacity, background-color;
-      transition-duration:  .5s;
-      transition-timing-function: ease-out;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-
-    .attribution:hover{
-      max-width: 308px;
-    }
-    .attribution:hover::after{
-      transform: scale(0) rotate(90deg);
-      opacity: 0; 
-      background-color: hsl(228, 45%, 44%);
-    }
-
-    </style>
   </head>
 
   <body>
@@ -168,6 +101,8 @@
           Romero</a>.
       </p>
     </div>
+
+    <div id="btn_motion" class="motion" title="Play/Stop motions"><i class="icon"></i></div>
     
     <!-- script -->
     <script src="scripts/core.js"></script>
